classDiagram
    OnePieceCharacter  "1" --> "1" origin: Born in
    OnePieceCharacter "1" --> "1" Crew: Part of
    OnePieceCharacter "1" --> "1" PirateFleet: Serves in
    OnePieceCharacter "1" --> "0..*" DevilFruit: Has eaten 
    DevilFruit "1" --> "1" DevilFruitType : Is Type of
    
    class OnePieceCharacter{
      +String name
      +String bloodtype
      +String occupation
      +String nickname
      +String devilfruit
      +bool isalive
      +bool hasdevilFruit
      +bool ispartOffleet
      +int age
      +int height
      +Date BirthDay
      +eat(DevilFruit)
    }



    class DevilFruit{
      +String Name
      +String Meaning           
    }  

    class DevilFruitType {
    <<enumeration>>
      Paramecia
      Zoan
      Logia
    }
    
    class origin{
      +String name
      +bool hasKingdom           
    }
        
    class crew {
      +String name
      +String oceanoforigin
      +String captain
      +String mainship
      +int totalbounty
    }

    class PirateFleet {
    +String name
    +String Captain
    +int totalpeople
    +int totalbounty
    }

    
     